# libcoins-emscripten

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootstrap.sh  helpers.js  index.html
proto/: libcoins.options  libcoins.proto
src/: HDWallet.cpp  HDWallet.h  HDWallet.hpp  HexEncoding.cpp  HexEncoding.hpp  main.cpp
src/trezor/: address.h  base58.h  bignum.h  bip32.h  bip39.h  bip39_english.h  blake256.h  blake2_common.h  blake2b.h  curves.h  ecdsa.h  groestl.h  groestl_internal.h  hasher.h  hmac.h  hmac_drbg.h  memzero.h  nist256p1.h  options.h  pbkdf2.h  rand.h  rfc6979.h  ripemd160.h  secp256k1.h  sha2.h
src/trezor/aes/: aes.h  aesopt.h  aestst.h
src/trezor/ed25519-donna/: curve25519-donna-32bit.h  curve25519-donna-helpers.h  curve25519-donna-scalarmult-base.h  ed25519-donna-32bit-tables.h  ed25519-donna-basepoint-table.h  ed25519-donna-impl-base.h  ed25519-donna-portable.h  ed25519-donna.h  ed25519-hash-custom-keccak.h  ed25519-hash-custom-sha3.h  ed25519-hash-custom.h  modm-donna-32bit.h
trezor-crypto/: CMakeLists.txt  cmake_install.cmake
trezor-crypto/tests/: CTestTestfile.cmake  cmake_install.cmake
